[gd_scene load_steps=6 format=3 uid="uid://do6hgdpuwfsmf"]

[ext_resource type="PackedScene" uid="uid://cgdlh6iv2j7we" path="res://scenes/menu/image_menu.tscn" id="1_f4wvw"]
[ext_resource type="Script" path="res://scenes/menu/menu.gd" id="1_y4d58"]
[ext_resource type="Texture2D" uid="uid://dayle54j3fk2g" path="res://models/menu/power_off.png" id="2_4yhxu"]
[ext_resource type="Texture2D" uid="uid://esj5tuyxt4n4" path="res://models/menu/PDP.png" id="3_a6fh8"]
[ext_resource type="FontFile" uid="uid://dwgslonlru0ck" path="res://ressources/Battlenet.ttf" id="3_coatq"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_y4d58")

[node name="image_menu" parent="." instance=ExtResource("1_f4wvw")]

[node name="Menu" type="VBoxContainer" parent="."]
offset_left = 915.0
offset_top = 313.0
offset_right = 1163.0
offset_bottom = 433.0
scale = Vector2(1.83, 1.83)
theme_override_constants/separation = 29
alignment = 1

[node name="NormalStart" type="Button" parent="Menu"]
layout_mode = 2
theme_type_variation = &"FlatButton"
text = " "

[node name="pdp1" type="TextureRect" parent="Menu/NormalStart"]
layout_mode = 0
offset_left = 1.0929
offset_top = -5.46448
offset_right = 41.0929
offset_bottom = 34.5355
texture = ExtResource("3_a6fh8")
expand_mode = 1

[node name="Label" type="Label" parent="Menu/NormalStart"]
layout_mode = 0
offset_left = 49.0
offset_top = 2.0
offset_right = 138.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource("3_coatq")
theme_override_font_sizes/font_size = 24
text = "Start"

[node name="InfiniteStart" type="Button" parent="Menu"]
layout_mode = 2
theme_type_variation = &"FlatButton"
text = " "

[node name="pdp2" type="TextureRect" parent="Menu/InfiniteStart"]
layout_mode = 0
offset_top = -4.26229
offset_right = 40.0
offset_bottom = 35.7377
texture = ExtResource("3_a6fh8")
expand_mode = 1

[node name="Label" type="Label" parent="Menu/InfiniteStart"]
layout_mode = 0
offset_left = 49.0
offset_top = 2.0
offset_right = 138.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource("3_coatq")
theme_override_font_sizes/font_size = 24
text = "Mode infini"

[node name="Options" type="Button" parent="Menu"]
layout_mode = 2
theme_type_variation = &"FlatButton"
text = "
"

[node name="pdp3" type="TextureRect" parent="Menu/Options"]
layout_mode = 0
offset_left = 1.0929
offset_top = -4.69944
offset_right = 41.0929
offset_bottom = 35.3006
texture = ExtResource("3_a6fh8")
expand_mode = 1

[node name="Label" type="Label" parent="Menu/Options"]
layout_mode = 0
offset_left = 49.0
offset_top = 2.0
offset_right = 138.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource("3_coatq")
theme_override_font_sizes/font_size = 24
text = "Options"

[node name="Power off" type="Button" parent="."]
offset_left = 46.0
offset_top = 828.0
offset_right = 183.0
offset_bottom = 858.0
theme_type_variation = &"FlatButton"

[node name="p_off" type="TextureRect" parent="Power off"]
layout_mode = 0
offset_left = 6.0
offset_top = -3.0
offset_right = 43.0
offset_bottom = 32.0
texture = ExtResource("2_4yhxu")
expand_mode = 1

[node name="Label" type="Label" parent="Power off"]
layout_mode = 0
offset_left = 49.0
offset_top = 2.0
offset_right = 138.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource("3_coatq")
theme_override_font_sizes/font_size = 24
text = "Power off"

[connection signal="pressed" from="Menu/NormalStart" to="." method="_on_normal_start_pressed"]
[connection signal="pressed" from="Menu/InfiniteStart" to="." method="_on_infinite_start_pressed"]
[connection signal="pressed" from="Menu/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Power off" to="." method="_on_power_off_pressed"]
